Fix API key trimming, offline enhancement guard, and add tests
Trim whitespace from API keys in config, improve offline image enhancement guard to block both 'mock-' and 'offline-' IDs, and update comments for clarity. Add comprehensive tests for bug fixes in App.test.jsx. Update Vite config to avoid double-stringifying Firebase config. Improve Playwright tests for advanced options and clarify atomicity issue in Transactions component.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"wait-on tcp:5173 && electron .\"",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"wait-on tcp:5173 && cross-env NODE_ENV=development electron .\"",
     "electron:build": "npm run build && electron-builder",
     "preflight": "npm run build && npm run lint",
     "test": "vitest",
