--- a/package.json
+++ b/package.json
@@ -113,7 +113,9 @@
     "globals": "^16.5.0",
     "jsdom": "^27.3.0",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^4.1.18",
+    "terser": "^5.44.1",
     "vite": "^7.2.4",
     "vitest": "^4.0.15",
     "wait-on": "^9.0.3"
