--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:obfuscated": "vite build && node scripts/obfuscate-guard.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"wait-on tcp:5173 && cross-env NODE_ENV=development electron .\"",
@@ -111,6 +112,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "javascript-obfuscator": "^4.1.0",
     "jsdom": "^27.3.0",
     "postcss": "^8.5.6",
     "rollup-plugin-visualizer": "^6.0.5",
