--- a/Source_of_Truth.yml
+++ b/Source_of_Truth.yml
@@ -1,10 +1,10 @@
 ---
 meta:
   last_updated: "2025-12-23"
-  source: "Official Venice.ai Documentation (docs.venice.ai), Privacy Pages, Blog Updates, Swagger Spec"
+  source: "Official Venice.ai Documentation (docs.venice.ai), Privacy Pages, Blog Updates, Swagger Spec, Changelogs"
   status: "Fully Updated & Verified"
   swagger_url: "https://api.venice.ai/doc/api/swagger.yaml"
-  notes: "Models subject to ongoing curation; check /models endpoint for live list."
+  notes: "Models, endpoints, and pricing are dynamic; query /models endpoint for live data. Incorporates 2025 deprecations and updates, including Explorer tier removal (May 2025), model retirements, and qwen3-235b split (December 14, 2025)."
 
 api_configuration:
   base_url: "https://api.venice.ai/api/v1"
@@ -14,95 +14,351 @@ api_configuration:
     type: "Bearer"
     header: "Authorization"
     format: "Bearer <VENICE_API_KEY>"
-    notes: "OpenAI-compatible SDK setup supported."
+    notes: "API keys managed via dashboard. Supports web3/autonomous generation."
+    scoping:
+      admin_keys: "Full privileges: generate/revoke keys, modify billing, account configs."
+      inference_only_keys: "Restricted to model endpoints (chat, image, audio); no admin access. Recommended for production to mitigate key leakage risks (post-May 2025 security update)."
 
 privacy_architecture:
   storage_policy: "No prompt/response retention on servers. Requests proxied transiently to decentralized GPUs; responses streamed directly."
-  logging: "Event metadata only (e.g., sign-ins, chat creation). No content logging. Local browser/device storage for history."
-  encryption: "SSL/TLS in transit. Conversation history encrypted locally."
-  additional: "GPU providers see raw prompts momentarily but without persistent storage or identifiable ties."
+  logging: "Event metadata only (e.g., sign-ins, chat creation, IP, timezone). No content logging. Local browser/device storage for history."
+  encryption: "SSL/TLS in transit; local history encrypted."
+  additional: "GPU providers see raw prompts momentarily without persistent storage or identifiable ties. Zero-retention is architectural, not configurable."
 
 endpoints:
   chat_completions:
     path: "/chat/completions"
     method: "POST"
-    compatibility: "Full OpenAI API Compatible (including streaming, tools, vision)"
-    special_parameters:
+    compatibility: "Full OpenAI API Compatible (including streaming, tools, vision on compatible models)"
+    parameters:
+      standard: "model (required), messages (required), temperature, max_tokens, etc. (per OpenAI spec)"
       venice_parameters:
         type: "object"
         properties:
           include_venice_system_prompt:
             type: "boolean"
             default: true
+            description: "Include Venice default system prompt."
           enable_web_search:
             type: "string"
             enum: ["off", "on", "auto"]
+            default: "off"
+            description: "Enables RAG via web search; incurs extra costs."
           enable_web_scraping:
             type: "boolean"
+            default: false
+            description: "Allows scraping URLs in prompt."
           enable_web_citations:
             type: "boolean"
+            default: false
+            description: "Includes [REF] citations in response."
+          include_search_results_in_stream:
+            type: "boolean"
+            default: false
+            description: "Streams raw search results."
+          return_search_results_as_documents:
+            type: "boolean"
+            default: false
+            description: "Formats search as tool-call documents (e.g., for LangChain)."
           strip_thinking_response:
             type: "boolean"
+            default: false
+            description: "Strips <think> tags from reasoning models."
           disable_thinking:
             type: "boolean"
+            default: false
+            description: "Disables Chain of Thought for compatible models."
           character_slug:
             type: "string"
-            description: "Use predefined AI character."
+            description: "Uses predefined AI character persona."
+    notes: "Supports suffixes (e.g., :enable_web_search=auto). Reasoning models use <think> tags. Web features charge extra: $10/1K calls (Venice models), $25/1K (others)."
   models:
     path: "/models"
     method: "GET"
-    description: "Lists all available models with constraints and capabilities."
+    description: "Lists available models with IDs, capabilities, constraints, pricing, context windows."
   image_generation:
     path: "/image/generate"
     method: "POST"
     parameters:
       model: "string (required)"
-      prompt: "string (required)"
-      negative_prompt: "string"
-      style_preset: "string"
-      height: "integer"
-      width: "integer"
-      steps: "integer"
-      cfg_scale: "number"
-      num_images: "integer (1-4)"
-      safe_mode: "boolean (blurs adult content if enabled)"
-      hide_watermark: "boolean"
-      return_binary: "boolean"
+      prompt: "string (required, 1-7500 chars)"
+      negative_prompt: "string (max 7500 chars)"
+      cfg_scale: "number (0 < x <= 20)"
+      steps: "integer (default 0, ignored by some models)"
+      seed: "integer (-999999999 <= x <= 999999999, default 0)"
+      width: "integer (0 < x <= 1280, default 1024, multiple of model's widthHeightDivisor)"
+      height: "integer (0 < x <= 1280, default 1024, multiple of model's widthHeightDivisor)"
+      aspect_ratio: "string (e.g., '1:1', '16:9')"
+      resolution: "string (e.g., '1K', '2K', '4K')"
+      style_preset: "string (see /image/styles)"
+      variants: "integer (1-4)"
+      safe_mode: "boolean (default true, blurs adult content)"
+      hide_watermark: "boolean (default false)"
+      return_binary: "boolean (default false)"
+      embed_exif_metadata: "boolean (default false)"
+      format: "string (jpeg, png, webp; default webp)"
+      lora_strength: "integer (0-100, for Lora models)"
+      inpaint: "any (deprecated May 19, 2025; disabled)"
+      enable_web_search: "boolean (default false, extra credits)"
+    notes: "Inpainting deprecated May 2025; revised API pending. Supports compression (gzip, br) when return_binary=false. Pricing: $0.01-$0.18 per image depending on model."
+  image_upscale:
+    path: "/image/upscale"
+    method: "POST"
+    parameters:
+      model: "string (e.g., upscaler)"
+      image: "string (base64 or URL)"
+      scale: "integer (typically 2x or 4x)"
+    notes: "Preserves EXIF/ICC profiles (updated June 2025). Pricing varies by model."
+  audio_speech:
+    path: "/audio/speech"
+    method: "POST"
+    description: "Text-to-Speech (TTS) generation."
+    parameters:
+      model: "string (default tts-kokoro)"
+      voice: "string (e.g., af_sky, af_alloy, af_bella; 54+ multilingual voices)"
+      input: "string (text to speak)"
+      format: "string (mp3, pcm)"
+    notes: "Supports streaming with chunked transfer. Pricing: $3.50/M characters."
+  characters_list:
+    path: "/characters"
+    method: "GET"
+    description: "Lists public characters for character_slug."
+  embeddings:
+    path: "/embeddings"
+    method: "POST"
+    description: "Generate embeddings."
+  video_generation:
+    path: "/video/generate"  # Inferred; actual path may vary per model
+    method: "POST"
+    description: "Text-to-video generation (emerging, beta)."
+    parameters:
+      model: "string (e.g., wan-2.6-text-to-video)"
+      prompt: "string"
+      duration: "integer (5-8s typical)"
+      resolution: "string (720p, 1080p)"
+      audio: "boolean"
+    notes: "Asynchronous/long-polling due to generation time. Pricing: $0.09-$0.88 per generation. Timeouts >60s recommended."
+  additional_endpoints:
+    image_styles: "/image/styles"  # GET: List style presets
+    deprecations: "/overview/deprecations"  # Documentation only
 
 model_catalog:
+  notes: "Dynamic; query /models for live IDs, capabilities, pricing. Updated with 2025 changes: qwen3-235b split Dec 14; multiple retirements (e.g., llama-3.2-3b May, deepseek-r1-671b Sep, flux-dev Oct)."
+  deprecations:
+    - date: "2025-05"  # May 2025
+      changes:
+        - "Explorer tier deprecated."
+        - "llama-3.2-3b retired (replaced by qwen3-4b)."
+        - "maverick retired (replaced by qwen3-235b)."
+        - "Inpainting (/image/edits) deprecated."
+    - date: "2025-07"  # July 2025
+      changes:
+        - "deepseek-coder retired (replaced by qwen3-coder)."
+    - date: "2025-09"  # September 2025
+      changes:
+        - "deepseek-r1-671b retired (replaced by qwen3-235b)."
+        - "llama-3.1-405b retired."
+        - "stable-diffusion-3.5 deprecated."
+    - date: "2025-10"  # October 2025
+      changes:
+        - "flux-dev, flux-dev-uncensored deprecated (replaced by qwen-image/lustify-sdxl)."
+    - date: "2025-12-14"  # December 14, 2025
+      changes:
+        - "qwen3-235b deprecated/split into thinking/instruct variants."
+        - "disable_thinking parameter deprecated for split models."
+    notes: "Deprecation warnings via headers (x-venice-model-deprecation-warning, x-venice-model-deprecation-date; 30-60 days notice). Deprecated requests auto-route to similar models at same/lower price or return 410 Gone."
   text_inference:
-    curated:
-      - id: "venice-uncensored"
-        description: "Default uncensored general-purpose model (32k-131k context)."
-      - id: "qwen3-235b-a22b-thinking-2507"
-        description: "Advanced reasoning with visible thinking steps."
-      - id: "qwen3-235b-a22b-instruct-2507"
-        description: "Non-thinking high-intelligence variant."
-      - id: "mistral-31-24b"
-        description: "Vision-capable text/multimodal."
-      - id: "qwen3-4b"
-        description: "Fast lightweight reasoning."
-    notes: "Legacy models rerouted; use /models for current IDs."
+    - id: "venice-uncensored"
+      description: "Version 1.1. No content filters. General-purpose uncensored."
+      pricing_input_output_per_1m: "$0.20 / $0.90"
+      context_window: "33K"
+    - id: "zai-org-glm-4.6"
+      description: "Flagship for reasoning and agents."
+      pricing_input_output_per_1m: "$0.85 / $2.75"
+      context_window: "203K"
+    - id: "qwen3-4b"
+      description: "Fast lightweight reasoning."
+      pricing_input_output_per_1m: "$0.05 / $0.15"
+      context_window: "33K"
+    - id: "mistral-31-24b"
+      description: "Vision-capable text/multimodal."
+      pricing_input_output_per_1m: "$0.50 / $2.00"
+      context_window: "131K"
+    - id: "qwen3-235b-a22b-thinking-2507"
+      description: "Advanced reasoning with visible thinking steps."
+      pricing_input_output_per_1m: "$0.45 / $3.50"
+      context_window: "131K"
+    - id: "qwen3-235b-a22b-instruct-2507"
+      description: "High-intelligence non-thinking variant."
+      pricing_input_output_per_1m: "$0.15 / $0.75"
+      context_window: "131K"
+    - id: "qwen3-next-80b-a3b-instruct"
+      description: "Balanced medium model."
+      pricing_input_output_per_1m: "$0.35 / $1.90"
+      context_window: "262K"
+    - id: "qwen3-coder-480b-a35b-instruct"
+      description: "Optimized for code generation."
+      pricing_input_output_per_1m: "$0.75 / $3.00"
+      context_window: "262K"
+    - id: "hermes-3-llama-3.1-405b"
+      description: "Deep reasoning beta."
+      pricing_input_output_per_1m: "$1.10 / $3.00"
+      context_window: "131K"
+    - id: "google-gemma-3-27b-it"
+      description: "Vision and function calling."
+      pricing_input_output_per_1m: "$0.12 / $0.20"
+      context_window: "203K"
+    - id: "grok-41-fast"
+      description: "Anonymized reasoning/vision."
+      pricing_input_output_per_1m: "$0.50 / $1.25"
+      context_window: "262K"
+    - id: "gemini-3-pro-preview"
+      description: "Advanced anonymized model."
+      pricing_input_output_per_1m: "$2.50 / $15.00"
+      context_window: "203K"
+    - id: "claude-opus-45"
+      description: "High-end reasoning/code."
+      pricing_input_output_per_1m: "$6.00 / $30.00"
+      context_window: "203K"
+    - id: "openai-gpt-oss-120b"
+      description: "Open-source large model."
+      pricing_input_output_per_1m: "$0.07 / $0.30"
+      context_window: "131K"
+    - id: "kimi-k2-thinking"
+      description: "Code/reasoning beta."
+      pricing_input_output_per_1m: "$0.75 / $3.20"
+      context_window: "262K"
+    - id: "deepseek-v3.2"
+      description: "Advanced reasoning beta."
+      pricing_input_output_per_1m: "$0.40 / $1.00"
+      context_window: "164K"
+    - id: "llama-3.2-3b"
+      description: "Function calling (deprecated but listed)."
+      pricing_input_output_per_1m: "$0.15 / $0.60"
+      context_window: "131K"
+    - id: "llama-3.3-70b"
+      description: "Balanced performance."
+      pricing_input_output_per_1m: "$0.70 / $2.80"
+      context_window: "131K"
+    - id: "openai-gpt-52"
+      description: "Anonymized reasoning."
+      pricing_input_output_per_1m: "$2.19 / $17.50"
+      context_window: "262K"
   image_generation:
-    curated:
-      - id: "nano-banana-pro"
-        description: "Photorealism, product shots, light upscaling."
-      - id: "fluently-xl"
-        description: "High-quality general image generation."
-      - id: "lustify-sdxl"
-        description: "Uncensored artistic focus."
+    - id: "venice-sd35"
+      description: "Stable Diffusion 3.5-based photorealism."
+      pricing: "$0.01 per image"
+    - id: "hidream"
+      description: "General image generation."
+      pricing: "$0.01 per image"
+    - id: "nano-banana-pro"
+      description: "Photoreal/product/upscaling."
+      pricing: "$0.18 per image"
+    - id: "lustify-sdxl"
+      description: "Uncensored artistic focus."
+      pricing: "$0.01 per image"
+    - id: "lustify-v7"
+      description: "Uncensored variant."
+      pricing: "$0.01 per image"
+    - id: "qwen-image"
+      description: "Multimodal image."
+      pricing: "$0.01 per image"
+    - id: "wai-Illustrious"
+      description: "Anime-style."
+      pricing: "$0.01 per image"
+    - id: "z-image-turbo"
+      description: "Fast generation."
+      pricing: "$0.01 per image"
+  video_generation:
+    - id: "wan-2.6-text-to-video"
+      description: "Text-to-video with audio."
+      pricing: "$0.83 per generation"
+      features: "Audio, 5-8s duration"
+    - id: "ltx-2-fast-text-to-video"
+      description: "Fast text-to-video."
+      pricing: "$0.26 per generation"
+      features: "Audio"
+    - id: "kling-2.6-pro-text-to-video"
+      description: "Pro text-to-video."
+      pricing: "$0.77 per generation"
+      features: "Audio"
+    - id: "veo3-fast-text-to-video"
+      description: "Fast text-to-video."
+      pricing: "$0.44 per generation"
+      features: "Audio, 720p/1080p"
+  audio_generation:
+    - id: "tts-kokoro"
+      description: "Multilingual TTS with 54+ voices."
+      pricing: "$3.50 per million characters"
 
 limits_and_pricing:
   tiers:
-    free:
-      description: "Daily limits on text/images; basic access."
     pro:
-      description: "Unlimited text, higher image limits, watermark removal, advanced models, one-time $10 API credit."
-      cost: "Monthly/annual subscription (check current pricing)."
-  api_access:
-    methods:
-      - "Pro trial credits"
-      - "Pay-as-you-go USD deposits"
-      - "DIEM staking (via VVV token) for renewable daily allocation"
+      description: "Unlimited text, higher image limits, watermark removal, advanced models. One-time $10 API credit upon upgrade."
+      cost: "Monthly/annual subscription (check current pricing at https://venice.ai/pricing)."
+    paid:
+      description: "Usage-based beyond Pro; higher limits via USD deposits or DIEM staking."
+  access_methods:
+    - "Pro trial credits: One-time $10 for testing."
+    - "Pay-as-you-go USD/Crypto deposits: Credits never expire."
+    - "DIEM staking (via VVV token): 1 Diem = $1/day renewable compute allocation."
+    notes: "Explorer tier deprecated May 2025. Pro shifted from unlimited slow inference to fixed $10 credit."
   rate_limits:
-    description: "Returned in headers (x-ratelimit-*); dynamic by tier/balance."
+    description: "Dynamic by tier/balance; returned in headers. Handle 402/429 for balance exhaustion."
+    headers:
+      - "x-ratelimit-limit-requests: Max requests per window."
+      - "x-ratelimit-remaining-requests: Remaining requests."
+      - "x-ratelimit-reset-requests: Reset timestamp (Unix)."
+      - "x-ratelimit-limit-tokens: Max tokens."
+      - "x-ratelimit-remaining-tokens: Remaining tokens."
+      - "x-venice-balance-usd: Current USD balance."
+      - "x-venice-balance-diem: Current Diem balance."
+      - "x-venice-model-deprecation-warning: Deprecation notice."
+      - "x-venice-model-deprecation-date: Sunset date."
+    tiers:
+      pro: "Higher limits; unlimited text, elevated image/video."
+      paid: "Scales with balance/staking; no fixed caps."
+  pricing:
+    model: "Usage-based: per million tokens (input/output), per image/video, extra for web features."
+    credits: "USD/Crypto purchases; never expire. Pro: one-time $10 credit."
+    diem: "Stake VVV for daily renewable allocation (1 Diem ≈ $1/day compute)."
+    web_features: "$10/1K calls (Venice models), $25/1K (others) for search/scraping."
+    notes: "Exact per-model rates via /models. Video more expensive ($0.09-$0.88/generation)."
+
+gap_analysis_vs_openai:
+  - feature: "Base URL"
+    openai: "api.openai.com/v1"
+    venice: "https://api.venice.ai/api/v1"
+    status: "Critical"
+  - feature: "System Prompt"
+    openai: "messages[role=system]"
+    venice: "messages + venice_parameters.include_venice_system_prompt"
+    status: "Functional Gap; required for uncensored use"
+  - feature: "Web Search"
+    openai: "Tool definitions"
+    venice: "venice_parameters.enable_web_search"
+    status: "Functional Gap; extra costs"
+  - feature: "Inpainting"
+    openai: "/images/edits"
+    venice: "Deprecated/Removed (May 2025; UI-only revival July)"
+    status: "Breaking Change"
+  - feature: "Model IDs"
+    openai: "gpt-4o, dall-e-3"
+    venice: "venice-uncensored, qwen3 variants, venice-sd35"
+    status: "Critical; frequent deprecations"
+  - feature: "Safety"
+    openai: "Hidden server-side"
+    venice: "safe_mode (in Image Gen)"
+    status: "Functional Gap"
+  - feature: "Logging"
+    openai: "logprobs, store"
+    venice: "Not supported (Zero Retention)"
+    status: "Architectural Gap"
+  - feature: "Upscaling"
+    openai: "Not supported"
+    venice: "/image/upscale"
+    status: "Feature Gap"
+  - feature: "Video"
+    openai: "Limited"
+    venice: "Dedicated models like wan-2.6-text-to-video"
+    status: "Emerging Feature"
