feat: enhance content guard with config, metrics, and rate limiting modules

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Venice.ai API Configuration
 # Get your API keys from https://venice.ai
 # You can specify multiple keys separated by commas for automatic rotation
-VITE_VENICE_API_KEYS=your-venice-api-key-1,your-venice-api-key-2,your-venice-api-key-3
+VITE_VENICE_API_KEYS=
 
 # Firebase Configuration (Optional - for cloud history sync)
 # Create a Firebase project at https://console.firebase.google.com
